[package]
name = "keeper"
version = "0.1.0"
authors = ["Sergey Ukolov <zezic51@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
pretty_env_logger = "0.4"
warp = "0.3"