[package]
name = "keeper"
version = "0.1.0"
authors = ["Sergey Ukolov <zezic51@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clickhouse = "0.6"
dotenv = "0.15.0"
pretty_env_logger = "0.4"
reflection = "0.1"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_repr = "0.1.7"
tokio = { version = "1", features = ["full"] }
warp = "0.3"